[gd_scene load_steps=4 format=2]

[ext_resource path="res://fps_player.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.317707, 1 )

[node name="fps_player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="collision_body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="collision_feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07482, 0 )
shape = SubResource( 2 )

[node name="rotation_helper" type="Spatial" parent="."]

[node name="player_model" type="Spatial" parent="rotation_helper"]

[node name="player_camera" type="Camera" parent="rotation_helper"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.890245, 0 )

[node name="gun_fire_points" type="Spatial" parent="rotation_helper"]

[node name="gun_aim_points" type="Spatial" parent="rotation_helper"]

[node name="player_flashlight" type="SpotLight" parent="rotation_helper"]
shadow_enabled = true
spot_range = 11.5324
spot_angle = 49.6594

[node name="grenade_toss_position" type="Spatial" parent="rotation_helper"]

[node name="player_hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
